# ai-ghostfunctions

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  howto.md  index.md  reference.md  requirements.txt  usage.md
src/ai_ghostfunctions/: __init__.py  ghostfunctions.py  keywords.py  types.py
tests/: __init__.py  test_ghostfunctions.py  test_import.py  test_keywords.py
