[tool.poetry]
name = "ai-ghostfunctions"
version = "0.3.1"
description = "AI Ghostfunctions"
authors = ["Brian M. Ritz <brianmritz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmritz/ai-ghostfunctions"
repository = "https://github.com/bmritz/ai-ghostfunctions"
documentation = "https://ai-ghostfunctions.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/bmritz/ai-ghostfunctions/releases"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.2"
typeguard = "^3.0.2"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = "^2022.12.7"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=3.2.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=3.0.1"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=1.0.0"}
nox = ">=2022.11.21"
nox-poetry = "^1.0.2"
ipython = "^8.11.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["ai_ghostfunctions", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
